<resources>
    <string name="MAP_API_KEY">AIzaSyCGc2VLW1Xg1Bj1KuOH_8e4VVN53Q85fBg</string>
    <string name="app_name">SimplyDo</string>
    <string name="about_us">About</string>
    <string name="appearance">Appearance</string>
    <string name="login">Login</string>
    <string name="mobile">Mobile</string>
    <string name="otp">OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="date_time">Date Time</string>
    <string name="date_label">Date</string>
    <string name="title">Title</string>
    <string name="contact_attachment">Contact Attachment</string>
    <string name="add">Add</string>
    <string name="image_attachment">Image Attachment</string>
    <string name="new_todo">Add New</string>
    <string name="add_todo">Add Todo</string>
    <string name="today">Today</string>
    <string name="today_caps">TODAY</string>
    <string name="task">Task</string>
    <string name="todo">Todo</string>
    <string name="no_event_available">No task available</string>
    <string name="next_event_available_on">Next task available on</string>
    <string name="eventDateString">eventDate</string>
    <string name="todo_options">TODO Options</string>
    <string name="options">Options</string>
    <string name="add_more_details">add more details</string>
    <string name="view_now">View Now</string>
    <string name="task_completed_label">Task Completed</string>
    <string name="todo_completed">Todo Completed</string>
    <string name="calender">Calender</string>
    <string name="edit">Edit</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="todo_calender_view">TODO Calender View</string>
    <string name="add_attachments">Add Attachments</string>
    <string name="select_contacts">Select Contacts</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_close_button">Contact Close Button</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="cancel_task">Cancel Task</string>
    <string name="contact">Contact</string>
    <string name="file">Files</string>
    <string name="audio">Audio</string>
    <string name="add_audio">Add audio</string>
    <string name="view_todo_option">View todo option</string>
    <string name="past">Past</string>
    <string name="completed">Completed</string>
    <string name="view_type">ViewType</string>
    <string name="date_expired">Date Expired</string>
    <string name="play_audio">Play Audio</string>
    <string name="gallery">Gallery</string>
    <string name="todo_audio_file">TODO Audio file</string>
    <string name="event_date">Event Date</string>
    <string name="set_a_title_to_task">Set a title to task</string>
    <string name="describe_your_task_here">Describe your task here</string>
    <string name="start_typing_things_here">Start typing things here</string>
    <string name="event_time">Event Time</string>
    <string name="attachments">Attachments</string>
    <string name="contacts">Contacts</string>
    <string name="location">Location</string>
    <string name="select_location">Select Location</string>
    <string name="your_task_here">Your task here</string>
    <string name="view_in_map">View in map</string>
    <string name="TODO_ITEM_KEY">todo_dtid</string>
    <string name="click_add_documents_to_add_files_documents_or_any_other_file">Click Select File to add files, documents or any other file types.</string>
    <string name="no_documents_available">No files available to display.</string>
    <string name="add_documents">Add Documents</string>
    <string name="select_file">Select File</string>
    <string name="add_files">Add Files</string>
    <string name="close_button">close button</string>
    <string name="app_task_id">task_dtId</string>
    <string name="app_notification_chennel_id">simplyDo_notifi_task</string>
    <string name="notification_title">"Hi , you have as task "</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="preload_sample_data">sample preload</string>
    <string name="you_have_no_task">No task available</string>
    <string name="click_new_todo_to_add_new_task_to_your_list">Click NEW TODO to add new task to your list</string>
    <string name="view_task">View Task</string>
    <string name="view_my_task">View my task</string>
    <string name="complete_task">Complete Task</string>
    <string name="edit_text">Edit Text</string>
    <string name="hello">Hello</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="edit_task">Edit Task</string>
    <string name="new_task">New Task</string>
    <string name="page_3_note">Simple will alert you before your task begins and also at event time.</string>
    <string name="page_2_note">Schedule your task in the app. You can even add attachments like files , audio, pictures, locations and contacts too.</string>
    <string name="page_1_note">Handle all your task with ease with simplydo</string>
    <string name="page_4_note">Complete your task on time with all the necessary files at a single place with hassle free mind every time.</string>
    <string name="storage_permission_required_note"><![CDATA[To select audio Storage Permission required. To enable Settings > Apps > AppInfo > Permissions and allow Storage Permission]]></string>
    <string name="permission_not_available">Permission Required</string>
    <string name="no_audio_file_available">No audio file available</string>
    <string name="no_audio_file_available_text">There is no audio file available in this device.</string>
    <string name="account">Account</string>
    <string name="notification">Notifications</string>
    <string name="notification_summary">Remainder, Sounds, Schedules</string>
    <string name="account_summary">Edit account details</string>
    <string name="invite">Invite a friend</string>
    <string name="appearance_summary">Dark mode, Wallpaper</string>
    <string name="add_task_text">Add Text</string>
    <string name="add_task_list">Add List</string>
    <string name="item_draggable">item draggable</string>
    <string name="content">Content</string>
    <string name="enter_content_here">Enter content here</string>
    <string name="add_item">Add Item</string>
    <string name="add_and_repeat">Add and Repeat</string>
    <string name="event_date_time">Event Date / Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="search">Search</string>
    <string name="confirm">Confirm</string>
    <string name="add_to_task">Add to task</string>
    <string name="new_task_added">New task added</string>
    <string name="fill_the_required_fields">Fill the required fields</string>
    <string name="remainder">Remainder</string>
    <string name="add_remainder">Add Remainder</string>
    <string name="all_day_remainder">All Day Remainder</string>
    <string name="required">Required</string>
    <string name="repeat_in_a_week">Repeat In a Week</string>
    <string name="set_repeat">Set Repeat</string>
    <string name="set">Set</string>
    <string name="repeat_period">Repeat Period</string>
    <string name="add_repeat">Add Repeat</string>
    <string name="filter">Filter</string>
    <string name="upcoming">Upcoming</string>
    <string name="hello_there">Hello there</string>
    <string name="discover_your_daily">Discover your daily</string>
    <string name="routine_here">routine here</string>
    <string name="tags">Tags</string>
    <string name="set_tag">Set Tag</string>
    <string name="selected_tags">Selected Tags</string>
    <string name="available_tags">Available Tags</string>
    <string name="add_tags">Add Tags</string>
    <string name="add_new_tag">Add New tag</string>
    <string name="you_have_not_selected_any_tags">You have not selected any tags</string>
    <string name="no_tags_available">No tags available</string>
    <string name="no_tags_selected">Tap to add tags to this task</string>
    <string name="done">Done</string>
    <string name="tap_to_set_repeat_period_to_this_task">Tap to set repeat period to this task</string>
    <string name="set_priority">Set Priority</string>
    <string name="high_priority">High Priority</string>
    <string name="medium_priority">Medium Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="tap_to_set_priority_to_this_task">Tap to set priority to this task</string>
    <string name="add_todo_list_here">Add todo list here</string>
    <string name="update">Update</string>
    <string name="priority">Priority</string>
    <string name="_3_attachments">3 attachments</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile">Profile</string>
    <string name="switch_account">Switch Account</string>
    <string name="description">Description</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="accounts">Accounts</string>
    <string name="link_an_account">Link an account</string>
    <string name="linked_accounts">Linked Accounts</string>
    <string name="tap_to_view_full_details">Tap to manage and view account</string>
    <string name="switch_workspace">Switch Workspace</string>
    <string name="my_workspace">My Workspace</string>
    <string name="available_workspace">Available Workspace</string>
    <string name="create_an_workspace">Create an workspace</string>
    <string name="plan_description">Get access to hundred of exclusive guides and features</string>
    <string name="continue_to_payment">Continue To Payment</string>
    <string name="group_insights">Group Insights</string>
    <string name="create_new_group">Create New Group</string>
    <string name="name">Name</string>
    <string name="participants">Participants</string>
    <string name="group_name_required_note">Group name is required!</string>
    <string name="select_participants">Select Participants</string>
    <string name="create_new_task">Create New Task</string>
    <string name="caption">caption</string>
    <string name="average_time_consumed">Average Time Consumed</string>
    <string name="finished_tasks">Finished Tasks</string>
    <string name="team_tasks">Team Tasks</string>
    <string name="welcome_back">Welcome back</string>
    <string name="rookie">Rookie</string>
    <string name="stage">Stage</string>
    <string name="share">Share</string>
    <string name="view_calender">View in Calendar</string>
    <string name="update_stage">Update Stage</string>
    <string name="add_participants">Add Participants</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="filter_by">Filter By</string>
    <string name="order_by">Order By</string>
    <string name="view_by">View By</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="snooze_time">Snooze Time</string>
    <string name="_15_mins">15 Minutes</string>
    <string name="_10_mins">10 Minutes</string>
    <string name="_5_mins">5 Minutes</string>
</resources>