<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.simplydo.dialog.bottomSheetDialogs.tags.TagsBottomSheetDialogViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".dialog.bottomSheetDialogs.tags.TagsBottomSheetDialog">

        <TextView
            style="@style/ToolbarStyledText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:text="@string/add_tags" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/selected_tags"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_tags_not_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/you_have_not_selected_any_tags" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_selected_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/available_tags"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_not_tags_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/no_tags_available" />


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_available_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_done"
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done" />

            <ImageButton
                style="@style/PrimaryButtonOptional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_new_tag"
                android:src="@drawable/ic_baseline_add_24" />

        </LinearLayout>

    </LinearLayout>
</layout>