<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".bottomSheetDialogs.newAddTodo.NewTodoOptionsFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/title_main"
            android:text="@string/options"
            android:textSize="34sp" />

        <Button
            android:id="@+id/buttonAddAttachments"
            style="@style/ButtonOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_attachments" />

        <Button
            android:id="@+id/buttonCloseOption"
            style="@style/ButtonOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close" />

    </LinearLayout>
</layout>